--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="Trolibuszok" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.min.js"></script>
