--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="hu">
 
 <head>
-  <meta name="Trolibuszok" content="width=device-width, initial-scale=1">
+  <meta name="vievport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="script.js">
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <title>Trolibuszok</title>
   <style>
   /* Make the image fully responsive */
   .carousel-inner img {
