--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
       <li class="nav-item">
         <a class="nav-link" href="#felsovezetes">Felsővezetés</a>
       </li>     
+      <li class="nav-item"> 
+        <a class="nav-link" href="#Budapesti viszonylatok">Budapesti viszonylatok</a>
+      </li>
     </ul>
   </div>
 </nav>
