--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
    </div>
    <div class="row">
     <div class="col-lg-12" id="felepites">
+      <p class="bootstrap img-thumbnail"><img src="jarmu.png" alt="Trolibusz felépítése"></p>
       <h2 class="display-4">Felépítés</h2> 
       <p>1980-ban gyártásba került csehszlovák Škoda 14Tr trolibusz rajza, vastag betűvel kiemelve a trolibusz-specifikus elemek.</p>
       <ul>
