--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <form method="post" id="jaratviszonylatok">
       <p>Járatszám: 
       <br>
-      <select onchange="vegallomasKiiras(this.value)" id="jaratSzam">       
+      <select onchange="vegallomasKiiras(this.value)" id="jaratszam">       
       <script>
         vegallomasNevek.forEach(jaratKiiras);
       </script>
