--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="hu">
 
 <head>
-  <meta name="vievport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="script.js">
+  <link rel="stylesheet" href="troli.css">
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <script src="troli.js"></script>
   <title>Trolibuszok</title>
   <style>
   /* Make the image fully responsive */
@@ -40,10 +41,10 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#felsovezetes">Felsővezetés</a>
-      </li>     
-      <li class="nav-item"> 
-        <a class="nav-link" href="#Budapesti viszonylatok">Budapesti viszonylatok</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#viszonylatok">Budapesti viszonylatok</a>
+      </li>   
     </ul>
   </div>
 </nav>
@@ -86,7 +87,7 @@
   <div class="row">
     <div class="col-lg-12">
 	  <h1 class="display-2">Trolibusz</h1>
-      <p id="def">A trolibusz olyan közúti tömegközlekedési elektromos hajtású, gumikerekes jármű, amelyet áramszedők kapcsolnak a felsővezetékhez, amiből a mozgáshoz szükséges energiát kapja. Funkciója általában a közforgalmú autóbuszéhoz hasonló. A trolibusz közúti jármű; a <a href="https://net.jogtar.hu/jogszabaly?docid=97500001.KPM" target="_blank">KRESZ</a> definíciója szerint „elektromos felsővezetékhez kötött gépkocsi”.</p>     
+      <p id="def">A trolibusz olyan közúti tömegközlekedési elektromos hajtású, gumikerekes jármű, amelyet áramszedők kapcsolnak a felsővezetékhez, amiből a mozgáshoz szükséges energiát kapja. Funkciója általában a közforgalmú autóbuszéhoz hasonló. A trolibusz közúti jármű; a <a href="http://net.jogtar.hu/kresz" target="_blank">KRESZ</a> definíciója szerint „elektromos felsővezetékhez kötött gépkocsi”.</p>     
     </div>
   </div>
   <div class="row">
@@ -100,33 +101,31 @@
     </div>
    </div>
    <div class="row">
-    <div class="col-lg-12" id="felepites">
-      <p class="bootstrap img-thumbnail"><img src="jarmu.png" alt="Trolibusz felépítése"></p>
+    <div class="col-lg-8" id="felepites">
       <h2 class="display-4">Felépítés</h2> 
       <p>1980-ban gyártásba került csehszlovák Škoda 14Tr trolibusz rajza, vastag betűvel kiemelve a trolibusz-specifikus elemek.</p>
-
-
-      <div id="magyarazat">
-        <ul>
-          <ol>Felsővezeték</ol>
-          <ol>Viszonylatjelző tábla</li>
-          <li>Visszapillantó tükör</li>
-          <li>Fényszóró</li>
-          <li>Első ajtó</li>
-          <li>Hajtott hátsó tengely</li>
-          <li>Második és harmadik ajtó</li>
-          <li>Kormányozható első tengely</li>
-          <li>Díszléc</li>
-          <li>Kötéldob</li>
-          <li>Lehúzó kötél</li>
-          <li>Áramszedő csúszófej</li>
-          <li>Áramszedő</li>
-          <li>Rögzítőlíra</li>
-          <li>Elektromos berendezés a tetőn</li>
-          <li>Pályaszám</li>
-        </ul>
-      </div>
-     
+      
+      <img src="jarmu.png" class="img-thumbnail" alt="Trolibusz felépítése" title="Trolibusz felépítése"/>      
+     </div>
+     <div class="col-lg-4" id="magyarazat">
+      <ol>
+        <li>Felsővezeték</li>
+        <li>Viszonylatjelző tábla</li>
+        <li>Visszapillantó tükör</li>
+        <li>Fényszóró</li>
+        <li>Első ajtó</li>
+        <li>Hajtott hátsó tengely</li>
+        <li>Második és harmadik ajtó</li>
+        <li>Kormányozható első tengely</li>
+        <li>Díszléc</li>
+        <li>Kötéldob</li>
+        <li>Lehúzó kötél</li>
+        <li>Áramszedő csúszófej</li>
+        <li>Áramszedő</li>
+        <li>Rögzítőlíra</li>
+        <li>Elektromos berendezés a tetőn</li>
+        <li>Pályaszám</li>
+      </ol>
      </div>
     </div>
     <div class="row">
@@ -142,7 +141,7 @@
       <form method="post" id="jaratviszonylatok">
       <p>Járatszám: 
       <br>
-      <select onchange="vegallomasKiiras(this.value)" id="jaratszam">       
+      <select onchange="vegallomasKiiras(this.value)" id="jaratSzam">       
       <script>
         vegallomasNevek.forEach(jaratKiiras);
       </script>
@@ -166,4 +165,3 @@
 
 </body>
 </html>
-
